[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/ui/battle_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/tilesets/structure_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://assets/battle/fightbar.png" type="Texture" id=3]
[ext_resource path="res://src/Battle/BattleStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Battle/Battle.gd" type="Script" id=5]
[ext_resource path="res://src/UI/StatsDialog.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/ItemsDialog.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/ui/main_theme.tres" type="Theme" id=8]
[ext_resource path="res://assets/player.png" type="Texture" id=9]
[ext_resource path="res://assets/npc/npc11.png" type="Texture" id=10]
[ext_resource path="res://assets/audio/ack_00.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/audio/ao_00.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/audio/dead_00.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/audio/ao_01.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/audio/dead_01.wav" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]
resource_name = "enemy_hurt"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Root/EnemySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 0.45, 0.5, 0.55, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 464, 192 ), Vector2( 460, 192 ), Vector2( 468, 192 ), Vector2( 460, 192 ), Vector2( 468, 192 ), Vector2( 464, 192 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Root/PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.75, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 176, 192 ), Vector2( 196, 192 ), Vector2( 196, 192 ), Vector2( 176, 192 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "_show_hit_effect"
}, {
"args": [ true ],
"method": "_play_hurt_sound"
} ]
}

[sub_resource type="Animation" id=2]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Root/PlayerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 0.45, 0.5, 0.55, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 176, 192 ), Vector2( 180, 192 ), Vector2( 172, 192 ), Vector2( 180, 192 ), Vector2( 172, 192 ), Vector2( 176, 192 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Root/EnemySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.75, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 464, 192 ), Vector2( 444, 192 ), Vector2( 444, 192 ), Vector2( 464, 192 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "_show_hit_effect"
}, {
"args": [ false ],
"method": "_play_hurt_sound"
} ]
}

[node name="Battle" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Root" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TileMap" parent="Root"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 29, 0, 1, 29, 0, 2, 29, 0, 3, 29, 0, 4, 29, 0, 5, 29, 0, 6, 29, 0, 7, 29, 0, 8, 29, 0, 9, 29, 0, 10, 29, 0, 11, 29, 0, 12, 29, 0, 13, 29, 0, 14, 29, 0, 15, 29, 0, 16, 29, 0, 17, 29, 0, 18, 29, 0, 19, 29, 0, 65536, 29, 0, 65537, 29, 0, 65538, 29, 0, 65539, 34, 0, 65540, 31, 0, 65541, 30, 0, 65542, 30, 0, 65543, 31, 0, 65544, 31, 0, 65545, 31, 0, 65546, 33, 0, 65547, 33, 0, 65548, 33, 0, 65549, 31, 0, 65550, 33, 0, 65551, 31, 0, 65552, 31, 0, 65553, 29, 0, 65554, 29, 0, 65555, 29, 0, 131072, 29, 0, 131073, 29, 0, 131074, 29, 0, 131075, 31, 0, 131076, 33, 0, 131077, 33, 0, 131078, 31, 0, 131079, 33, 0, 131080, 33, 0, 131081, 31, 0, 131082, 33, 0, 131083, 34, 0, 131084, 31, 0, 131085, 33, 0, 131086, 30, 0, 131087, 30, 0, 131088, 33, 0, 131089, 29, 0, 131090, 29, 0, 131091, 29, 0, 196608, 29, 0, 196609, 29, 0, 196610, 29, 0, 196611, 33, 0, 196612, 33, 0, 196613, 31, 0, 196614, 33, 0, 196615, 31, 0, 196616, 33, 0, 196617, 33, 0, 196618, 30, 0, 196619, 30, 0, 196620, 33, 0, 196621, 31, 0, 196622, 45, 0, 196623, 33, 0, 196624, 31, 0, 196625, 29, 0, 196626, 29, 0, 196627, 29, 0, 262144, 29, 0, 262145, 29, 0, 262146, 29, 0, 262147, 33, 0, 262148, 33, 0, 262149, 45, 0, 262150, 33, 0, 262151, 33, 0, 262152, 30, 0, 262153, 33, 0, 262154, 33, 0, 262155, 33, 0, 262156, 33, 0, 262157, 30, 0, 262158, 33, 0, 262159, 30, 0, 262160, 33, 0, 262161, 29, 0, 262162, 29, 0, 262163, 29, 0, 327680, 29, 0, 327681, 29, 0, 327682, 29, 0, 327683, 30, 0, 327684, 33, 0, 327685, 33, 0, 327686, 33, 0, 327687, 30, 0, 327688, 33, 0, 327689, 33, 0, 327690, 33, 0, 327691, 33, 0, 327692, 33, 0, 327693, 33, 0, 327694, 33, 0, 327695, 33, 0, 327696, 33, 0, 327697, 29, 0, 327698, 29, 0, 327699, 29, 0, 393216, 29, 0, 393217, 29, 0, 393218, 29, 0, 393219, 33, 0, 393220, 33, 0, 393221, 33, 0, 393222, 33, 0, 393223, 33, 0, 393224, 33, 0, 393225, 33, 0, 393226, 33, 0, 393227, 33, 0, 393228, 33, 0, 393229, 33, 0, 393230, 33, 0, 393231, 33, 0, 393232, 33, 0, 393233, 29, 0, 393234, 29, 0, 393235, 29, 0, 458752, 29, 0, 458753, 29, 0, 458754, 29, 0, 458755, 33, 0, 458756, 33, 0, 458757, 33, 0, 458758, 33, 0, 458759, 33, 0, 458760, 33, 0, 458761, 33, 0, 458762, 33, 0, 458763, 33, 0, 458764, 33, 0, 458765, 33, 0, 458766, 33, 0, 458767, 33, 0, 458768, 33, 0, 458769, 29, 0, 458770, 29, 0, 458771, 29, 0, 524288, 29, 0, 524289, 29, 0, 524290, 29, 0, 524305, 29, 0, 524306, 29, 0, 524307, 29, 0, 589824, 29, 0, 589825, 29, 0, 589826, 29, 0, 589841, 29, 0, 589842, 29, 0, 589843, 29, 0, 655360, 29, 0, 655361, 29, 0, 655362, 29, 0, 655377, 29, 0, 655378, 29, 0, 655379, 29, 0, 720896, 29, 0, 720897, 29, 0, 720898, 29, 0, 720899, 29, 0, 720900, 29, 0, 720901, 29, 0, 720902, 29, 0, 720903, 29, 0, 720904, 29, 0, 720905, 29, 0, 720906, 29, 0, 720907, 29, 0, 720908, 29, 0, 720909, 29, 0, 720910, 29, 0, 720911, 29, 0, 720912, 29, 0, 720913, 29, 0, 720914, 29, 0, 720915, 29, 0 )

[node name="Bar" type="TextureRect" parent="Root"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = -120.0
margin_right = -96.0
margin_bottom = -8.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sections" type="HBoxContainer" parent="Root/Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStats" parent="Root/Bar/Sections" instance=ExtResource( 4 )]
margin_bottom = 112.0

[node name="Actions" type="VBoxContainer" parent="Root/Bar/Sections"]
margin_left = 193.0
margin_right = 254.0
margin_bottom = 112.0
rect_min_size = Vector2( 61, 0 )
custom_constants/separation = 6
alignment = 1

[node name="Attack" type="Button" parent="Root/Bar/Sections/Actions"]
margin_top = 9.0
margin_right = 61.0
margin_bottom = 28.0
text = "攻击"

[node name="Stats" type="Button" parent="Root/Bar/Sections/Actions"]
margin_top = 34.0
margin_right = 61.0
margin_bottom = 53.0
text = "状态"

[node name="Items" type="Button" parent="Root/Bar/Sections/Actions"]
margin_top = 59.0
margin_right = 61.0
margin_bottom = 78.0
text = "物品"

[node name="Retreat" type="Button" parent="Root/Bar/Sections/Actions"]
margin_top = 84.0
margin_right = 61.0
margin_bottom = 103.0
text = "逃走"

[node name="EnemyStats" parent="Root/Bar/Sections" instance=ExtResource( 4 )]
margin_left = 255.0
margin_right = 447.0
margin_bottom = 112.0

[node name="StatsDialog" parent="Root" instance=ExtResource( 6 )]

[node name="ItemsDialog" parent="Root" instance=ExtResource( 7 )]
margin_bottom = 322.0

[node name="MessageLabel" type="Label" parent="Root"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -9.5
margin_right = 20.0
margin_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 8 )
text = "你死了"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSprite" type="Sprite" parent="Root"]
position = Vector2( 196, 192 )
texture = ExtResource( 9 )
vframes = 4
hframes = 3
frame = 6

[node name="EnemySprite" type="Sprite" parent="Root"]
position = Vector2( 468, 192 )
texture = ExtResource( 10 )
vframes = 4
hframes = 2
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enemy_hurt = SubResource( 1 )
anims/player_hurt = SubResource( 2 )

[node name="PlayerDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="EnemyDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="PlayerHurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="EnemyHurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
[connection signal="pressed" from="Root/Bar/Sections/Actions/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="Root/Bar/Sections/Actions/Stats" to="." method="_on_Stats_pressed"]
[connection signal="pressed" from="Root/Bar/Sections/Actions/Items" to="." method="_on_Items_pressed"]
[connection signal="pressed" from="Root/Bar/Sections/Actions/Retreat" to="." method="_on_Retreat_pressed"]
[connection signal="finished" from="Root/ItemsDialog" to="." method="_on_ItemsDialog_finished"]
[connection signal="item_selected" from="Root/ItemsDialog" to="." method="_on_ItemsDialog_item_selected"]
